# freeorion-sdk

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  .travis_wait  .travis_wait_transparent  CMakeLists.txt  ChangeLog.md  Dockerfile  README-WIN32.txt  README.md  Sources.cmake  Version.cmake  appveyor.yml  boost-config-clang.jam.in  boost-config-msvc.jam.in  boost-config.jam.in  boost.patch  bootstrap.bat  bootstrap.command  exe.manifest  glew.patch  libogg.patch  libpng.patch  libvorbis.patch  openal-soft.patch  python-cmake.patch  sdl.patch  zlib.patch
.github/workflows/: android-macos-python.yml  macos.yml  release.yml  windows.yml
cmake/: CopyFiles.cmake  DeleteFiles.cmake
patches/: boost-0-install_pdb_files_for_debug_and_relwithdebinfo.patch  boost-2-prevent-multiple-definitions-of-BOOST_ASIO_ERROR_CATEGORY_NOEXCEPT.patch  boost-4-Print-selected-configurations-for-darwin-compiler.patch  boost-5-Remove-SDK-subdirectory-it-doesn-t-exist-in-the-new-.patch  boost.patch  freetype2-0-add_version_and_runtime_to_output_name_on_windows.patch  freetype2-1-remove_2_suffix_from_freetype_header_install_path.patch  freetype2-2-disable_deprecated_crt_warning_in_msvc.patch  freetype2.patch  glew-0-dont_install_pkgconfig_on_windows.patch  glew-1-remove_glewmx_related_targets.patch  glew-2-install_pdb_for_debug_and_relwithdebinfo.patch  glew-3-dont_install_glew_cmake_export_targets.patch  libogg-0-upstream_cmake-v1.3.2..9b2ba41.patch  libogg-1-dont_install_pkgconfig_on_windows.patch  libogg-2-add_lib_prefix_to_output_files_on_windows.patch  libogg-3-install_pdb_file_for_debug_and_relwithdebinfo.patch  libpng-0-install_pdb_file_for_debug_and_relwithdebinfo.patch  libvorbis-0-upstream_cmake-v1.3.5..5a263ec.patch  libvorbis-1-add_vorbisenc_to_vorbis_target_for_win32.patch  libvorbis-2-add_missing_vorbis_link_library_to_vorbisfile.patch  libvorbis-2-dont_install_pkgconfig_on_windows.patch  libvorbis-3-add_lib_prefix_to_output_files_on_windows.patch  libvorbis-3-dont_install_pkgconfig_on_windows.patch  libvorbis-4-add_lib_prefix_to_output_files_on_windows.patch  libvorbis-4-install_pdb_file_for_debug_and_relwithdebinfo.patch  libvorbis-5-add_libogg_as_additional_name_to_ogg_library_search.patch  libvorbis-5-install_pdb_file_for_debug_and_relwithdebinfo.patch  libvorbis-6-add_libogg_as_additional_name_to_ogg_library_search.patch  libvorbis-6-remove_vorbisenc_target.patch  libvorbis-7-remove_vorbisenc_target.patch  libvorbis-8-add_full_path_to_pkgconfig_install_in_cmake.patch  libvorbis-8-disable_msvc_compiler_warnings.patch  openal-soft-0-add_install_option_for_pkgconfig_files.patch  openal-soft-1-install_pdb_file_for_debug_and_relwithdebinfo.patch  python-cmake-0-install_pdb_file_for_debug_and_relwithdebinfo.patch  python-cmake-1-dont_install_python_cmake_export_targets.patch  python-cmake-2-change_pathes_to_match_current_win32_sdk_layout.patch  python-cmake-3_disable_msvc_compiler_warnings.patch  sdl2-0-install_pdb_file_for_debug_and_relwithdebinfo.patch  (+3 more)
patches/boost/: 0001-7970.patch  0001-Fix-hidden-visibility-symbols-for-mac-clang-iostreams.patch  0001-Fix-hidden-visibility-symbols-for-mac-clang-locale.patch  0001-Fix-hidden-visibility-symbols-for-mac-clang.patch  0001-Fixed-missing-symbols-in-libboost_log_setup-on-mac-c.patch  0001-Fixed-missing-symbols-in-libboost_log_setup.patch  0001-Install-pdb-files-for-Debug-and-RelWithDebInfo-build.patch  0001-Prevent-multiple-definition-of-BOOST_ASIO_ERROR_CATE.patch  0001-Remove-version-suffix-from-include-directory.patch  0001-Test-language-version-using-_MCSV_LANG-rather-than-_HAS_CXX17.patch  0001-Use-RPATH-with-clang-darwin.patch  0002-Install-.pdb-files-with-.lib.patch  0002-Print-selected-configurations-for-darwin-compiler-wh.patch  0002-The-last-fix-produces-a-compiler-with-Visual-Studio-.patch  0003-7920.patch  0003-Don-t-install-cmake-configs.patch  0003-Search-Xcode-whole-installation-for-MacOSX-SDKs.patch  0003-Use-RPATH-with-Clang-darwin.patch  0004-Don-t-install-root-Boost-CMake-configs.patch  0004-Fix-10591-boost-filesystem-does-not-build-on-iOS-8.patch  0004-Search-Xcode-whole-installation-for-MacOSX-SDKs.patch  0005-Fix-abbreviate-paths-eating-following-arg.patch  0005-Fix-min-MacOSX-version.patch  0005-macros-for-non-windows.patch  0006-Fix-flag-arguments-538.patch  0007-Fix-silent-cli-errors-452.patch
patches/boost-build/: 0001-Install-pdb-files-for-Debug-and-RelWithDebInfo-build.patch  0002-Print-selected-configurations-for-darwin-compiler-wh.patch  0004-Search-Xcode-whole-installation-for-MacOSX-SDKs.patch
patches/freetype/: 0001-cmake-Add-version-and-c-runtime-type-to-output-name.patch  0002-Disable-MSVC-deprecation-warnings-in-CMake.patch  0003-CMake-Install-pdb-file-for-Debug-and-RelWithDebInfo.patch  0003-Install-ft2build.h-both-into-freetype-and-root-inclu.patch  0004-CMake-Install-pdb-file-for-Debug-and-RelWithDebInfo.patch  0004-CMake-When-building-a-shared-library-export-all-symb.patch  0005-Don-t-export-freetype-cmake-targets.patch  0005-Remove-shared-library-suffix-on-Windows.patch
patches/freetype2/: 0001-cmake-Add-version-and-c-runtime-type-to-output-name.patch  0002-Remove-2-suffix-from-freetype-header-install-path.patch  0003-Disable-MSVC-deprecation-warnings-in-CMake.patch
patches/glew/: 0001-CMake-Don-t-install-pkg-config-files-on-Windows.patch  0002-Don-t-install-glew-CMake-export-targets.patch  0002-Remove-glewmx-related-targets.patch  0003-CMake-Install-pdb-file-for-Debug-and-RelWithDebInfo.patch  0003-Visual-Studio-16-release-mode-cmake-fixup.patch  0004-Don-t-install-glew-CMake-export-targets.patch
patches/libogg/: 0001-Upstream-changes-since-v1.3.2.patch  0002-CMake-Don-t-install-pkg-config-files-on-Windows.patch  0003-CMake-Add-lib-prefix-to-output-files-on-Windows.patch  0004-CMake-Install-pdb-file-for-Debug-and-RelWithDebInfo.patch  0005-Don-t-install-pkg-config-files-when-building-a-MacOS.patch  0006-Enable-MACOSX_RPATH-to-prefix-the-install_name-for-M.patch
patches/libpng/: 0001-Install-pdb-file-for-Debug-and-RelWithDebInfo-config.patch
(+82 files in other folders)
